United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7130334 G1: Change comments and error messages that refer to CMS in g1/concurrentMark.cpp/hpp
7130334 : G1: Change comments and error messages that refer to CMS in g1/concurrentMark.cpp/hpp

Details
Type:
Bug
Submit Date:
2012-01-16
Status:
Closed
Updated Date:
2012-03-24
Project Name:
JDK
Resolved Date:
2012-03-24
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:

Sub Tasks

Description
The files g1/concurrentMark.cpp and g1/concurrentMark.hpp have comments and error messages that refer to CMS. Particularly the error messages are unfortunate since they can be user visible. We should update thes comments and messages.

Did a "grep -R -i CMS src/share/vm/gc_implementation/g1". concurrentMark.cpp/hpp seem to be the only files that have this issue. The other files mention CMS in a correct way:

src/share/vm/gc_implementation/g1/concurrentMark.cpp:// CMS Bit Map Wrapper
src/share/vm/gc_implementation/g1/concurrentMark.cpp:  guarantee(brs.is_reserved(), "couldn't allocate CMS bit map");
src/share/vm/gc_implementation/g1/concurrentMark.cpp:            "couldn't reseve backing store for CMS bit map");
src/share/vm/gc_implementation/g1/concurrentMark.cpp:         "didn't reserve backing store for all of CMS bit map?");
src/share/vm/gc_implementation/g1/concurrentMark.cpp:    // the ones in CMS generation.
src/share/vm/gc_implementation/g1/concurrentMark.cpp:// from external roots in the CMS bit map.
src/share/vm/gc_implementation/g1/concurrentMark.cpp:// This closure is used to mark refs into the CMS generation in
src/share/vm/gc_implementation/g1/concurrentMark.cpp:// the CMS bit map. Called at the first checkpoint.
src/share/vm/gc_implementation/g1/concurrentMark.hpp:  // CMS marking support structures
src/share/vm/gc_implementation/g1/concurrentMarkThread.cpp:// Note: As is the case with CMS - this method, although exported
src/share/vm/gc_implementation/g1/g1BlockOffsetTable.inline.hpp:      // CMS-specific note: a block abutting _unallocated_block to
src/share/vm/gc_implementation/g1/g1CollectedHeap.hpp:  // have been elided. G1, like CMS, allows this, but should be
src/share/vm/gc_implementation/g1/vm_operations_g1.cpp:      // The following is largely copied from CMS
src/share/vm/gc_implementation/g1/vm_operations_g1.hpp:// consider sharing these with CMS's counterparts.
src/share/vm/gc_implementation/g1/vm_operations_g1.hpp:  VM_CGC_Operation(VoidClosure* cl, const char *printGCMsg)
src/share/vm/gc_implementation/g1/vm_operations_g1.hpp:    : _cl(cl), _printGCMessage(printGCMsg) { }

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/851b58c26def
                                     
2012-03-22
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/851b58c26def
                                     
2012-01-18



Hardware and Software, Engineered to Work Together