7130334: G1: Change comments and error messages that refer to CMS in g1/concurrentMark.cpp/hpp

Removed references to CMS in the concurrentMark.cpp/hpp files.

Reviewed-by: tonyp, jmasa, johnc